Image extention fixed

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ li {
 }
 
 #gapps {
-  background: url("../img/gapps.JPG") 35px 33px;
+  background: url("../img/gapps.jpg") 35px 33px;
   display: inline-block;
   position: relative;
   width: 28px;
